--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -75,40 +75,43 @@
     </main>
   </div>
 
-  <!-- Modal -->
-  <div id="ticketModal" class="fixed inset-0 z-50 bg-black bg-opacity-40 hidden flex items-center justify-center px-4">
- <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md max-h-[90vh] p-6 animate-fade-in flex flex-col overflow-y-auto">
+  <!-- Modal Wrapper -->
+<div id="ticketModal" class="fixed inset-0 z-50 bg-black bg-opacity-40 hidden items-center justify-center px-4 py-6 overflow-y-auto">
+  <!-- Modal Container -->
+  <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md mx-auto p-6 animate-fade-in relative">
+    
+    <!-- Modal Header -->
+    <div class="flex justify-between items-center mb-4">
+      <h2 id="modalTitle" class="text-lg font-semibold text-indigo-700">Reply to Ticket</h2>
+      <button id="modalClose" class="text-gray-400 hover:text-gray-700 text-2xl font-bold leading-none">&times;</button>
+    </div>
 
-      <!-- Header -->
-      <div class="flex justify-between items-center mb-4">
-        <h2 id="modalTitle" class="text-lg font-semibold text-indigo-700">Reply to Ticket</h2>
-        <button id="modalClose" class="text-gray-400 hover:text-gray-700 text-2xl font-bold leading-none">&times;</button>
+    <!-- Modal Scrollable Content -->
+    <div class="overflow-y-auto max-h-[60vh] pr-1">
+      <div id="modalThread" class="text-sm text-gray-700 space-y-3 mb-4 border-t pt-3">
+        <!-- thread messages get inserted here -->
       </div>
 
-      <!-- Thread -->
-      <div id="modalThread" class="text-sm text-gray-700 space-y-3 border-t pt-4 pb-4 overflow-y-auto flex-1 pr-1">
-        <!-- Thread content populated via JS -->
-      </div>
-
-      <!-- Message Box -->
       <textarea
         id="modalTextarea"
         rows="4"
         placeholder="Write your reply..."
-        class="w-full p-3 mt-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 resize-none"
+        class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 resize-none mb-4"
       ></textarea>
+    </div>
 
-      <!-- Action -->
-      <div class="mt-6 text-right">
-        <button
-          id="modalSubmit"
-          class="bg-blue-600 hover:bg-blue-700 text-white font-semibold text-sm px-6 py-2.5 rounded-full shadow-sm transition"
-        >
-          💬 Send Reply
-        </button>
-      </div>
+    <!-- Modal Footer -->
+    <div class="text-right">
+      <button
+        id="modalSubmit"
+        class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-5 py-2 rounded-lg shadow-sm transition"
+      >
+        Send Reply
+      </button>
     </div>
   </div>
+</div>
+
 
   <!-- Ticket Template -->
   <template id="ticketThreadTemplate">
