--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -75,23 +75,25 @@
     </main>
   </div>
 
-  <!-- Modal Wrapper -->
+  <!-- Modal -->
 <div id="ticketModal" class="fixed inset-0 z-50 bg-black bg-opacity-40 hidden items-center justify-center px-4 py-6 overflow-y-auto">
   <!-- Modal Container -->
   <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md mx-auto p-6 animate-fade-in relative">
     
-    <!-- Modal Header -->
+    <!-- Header -->
     <div class="flex justify-between items-center mb-4">
       <h2 id="modalTitle" class="text-lg font-semibold text-indigo-700">Reply to Ticket</h2>
       <button id="modalClose" class="text-gray-400 hover:text-gray-700 text-2xl font-bold leading-none">&times;</button>
     </div>
 
-    <!-- Modal Scrollable Content -->
+    <!-- Scrollable Content -->
     <div class="overflow-y-auto max-h-[60vh] pr-1">
+      <!-- Ticket Thread -->
       <div id="modalThread" class="text-sm text-gray-700 space-y-3 mb-4 border-t pt-3">
-        <!-- thread messages get inserted here -->
+        <!-- Replies dynamically inserted here -->
       </div>
 
+      <!-- Reply Textarea -->
       <textarea
         id="modalTextarea"
         rows="4"
@@ -100,11 +102,11 @@
       ></textarea>
     </div>
 
-    <!-- Modal Footer -->
+    <!-- Footer -->
     <div class="text-right">
       <button
         id="modalSubmit"
-        class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-5 py-2 rounded-lg shadow-sm transition"
+        class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg shadow-sm transition"
       >
         Send Reply
       </button>
