--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,19 +1,24 @@
 <!-- public/admin/sidebar.html -->
 <aside
   id="sidebar"
-  class="fixed md:relative inset-y-0 left-0 z-40 w-72 h-screen bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col"
+  class="fixed md:relative inset-y-0 left-0 z-40 w-72 min-h-screen bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col"
 >
-  <!-- Logo & Business Info (Sticky Top) -->
+  <!-- Top: Logo & Business Info -->
   <div class="p-6 flex items-center gap-3 bg-white border-b shadow sticky top-0 z-10">
-    <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full shadow-md" />
-    <div>
+    <img
+      id="logo"
+      src="/assets/logo-placeholder.png"
+      alt="Logo"
+      class="w-10 h-10 rounded-full shadow-md"
+    />
+    <div class="overflow-hidden">
       <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">Business</h1>
-      <p id="sidebarUserName" class="text-sm text-gray-500"></p>
+      <p id="sidebarUserName" class="text-sm text-gray-500 truncate"></p>
     </div>
   </div>
 
-  <!-- Scrollable Navigation -->
-  <div class="flex-1 overflow-y-auto px-4 py-4 space-y-1 font-medium text-gray-700">
+  <!-- Middle: Scrollable Navigation Links -->
+  <nav class="flex-1 overflow-y-auto px-4 py-4 space-y-1 font-medium text-gray-700">
     <a href="/admin/dashboard.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏠 Dashboard</a>
     <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
     <a href="/admin/bookings.html" class="block px-4 py-2 rounded hover:bg-blue-50">📆 Bookings</a>
@@ -33,11 +38,14 @@
     <a href="/admin/support_ticket.html" class="block px-4 py-2 rounded hover:bg-blue-50">🆘 Support</a>
     <a href="/admin/zapier.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚡ Automations</a>
     <a href="/admin/ai-assistant.html" class="block px-4 py-2 rounded hover:bg-blue-50">🤖 AI Assistant</a>
-  </div>
+  </nav>
 
-  <!-- Logout (Sticky Bottom) -->
+  <!-- Bottom: Logout Button -->
   <div class="p-4 border-t bg-white sticky bottom-0 z-10 shadow-inner">
-    <button id="logoutBtn" class="w-full px-4 py-2 text-white bg-blue-600 rounded-md hover:bg-blue-700 transition">
+    <button
+      id="logoutBtn"
+      class="w-full px-4 py-2 text-white bg-blue-600 rounded-md hover:bg-blue-700 transition"
+    >
       🚪 Logout
     </button>
   </div>
