--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -56,6 +56,19 @@
           placeholder="🔍 Search tickets..."
           class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500"
         />
+<div class="flex flex-wrap gap-4 items-center">
+  <select id="filterDate" class="border rounded px-3 py-2 text-sm shadow-sm">
+    <option value="">🕓 Filter by Time</option>
+    <option value="newest">Newest First</option>
+    <option value="oldest">Oldest First</option>
+  </select>
+
+  <select id="filterStatus" class="border rounded px-3 py-2 text-sm shadow-sm">
+    <option value="">📌 Filter by Status</option>
+    <option value="Open">Open</option>
+    <option value="Resolved">Resolved</option>
+  </select>
+</div>
 
         <!-- Ticket List -->
         <div id="ticketList" class="space-y-6 mt-6"></div>
