--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,10 +1,10 @@
 <!-- public/admin/sidebar.html -->
 <aside
   id="sidebar"
-  class="fixed md:relative inset-y-0 left-0 z-40 w-72 min-h-screen bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col"
+  class="fixed md:relative inset-y-0 left-0 z-40 w-72 h-screen md:h-auto bg-white shadow-lg md:shadow-none flex flex-col"
 >
   <!-- Top: Logo & Business Info -->
-  <div class="p-6 flex items-center gap-3 bg-white border-b shadow sticky top-0 z-10">
+  <div class="p-6 flex items-center gap-3 border-b shadow bg-white sticky top-0 z-10">
     <img
       id="logo"
       src="/assets/logo-placeholder.png"
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <!-- Middle: Scrollable Navigation Links -->
+  <!-- Middle: Scrollable Navigation -->
   <nav class="flex-1 overflow-y-auto px-4 py-4 space-y-1 font-medium text-gray-700">
     <a href="/admin/dashboard.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏠 Dashboard</a>
     <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
@@ -40,7 +40,7 @@
     <a href="/admin/ai-assistant.html" class="block px-4 py-2 rounded hover:bg-blue-50">🤖 AI Assistant</a>
   </nav>
 
-  <!-- Bottom: Logout Button -->
+  <!-- Bottom: Logout -->
   <div class="p-4 border-t bg-white sticky bottom-0 z-10 shadow-inner">
     <button
       id="logoutBtn"
