--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -1,162 +1,164 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full bg-gray-100 text-gray-900">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Support Tickets – Tidyzenic Admin</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Support Tickets – Tidyzenic Admin</title>
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="/styles.css" />
+  <!-- Styles -->
+  <link rel="stylesheet" href="/styles.css" />
 
-    <!-- Scripts -->
-    <script defer src="/socket.io/socket.io.js"></script>
-    <script defer src="/admin/js/tickets.js"></script>
-    <script defer src="/admin/js/load-sidebar.js"></script>
-    <script defer src="/js/auth-check.js"></script>
+  <!-- Scripts -->
+  <script defer src="/socket.io/socket.io.js"></script>
+  <script defer src="/admin/js/tickets.js"></script>
+  <script defer src="/admin/js/load-sidebar.js"></script>
+  <script defer src="/js/auth-check.js"></script>
 
-    <style>
-      @keyframes fade-in {
-        from {
-          opacity: 0;
-          transform: translateY(10px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-      .animate-fade-in {
-        animation: fade-in 0.25s ease-out;
-      }
-    </style>
-  </head>
+  <style>
+    @keyframes fade-in {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .animate-fade-in {
+      animation: fade-in 0.25s ease-out;
+    }
+  </style>
+</head>
 
-  <body class="h-screen flex overflow-hidden bg-gray-100 font-sans">
-    <!-- Sidebar container -->
-    <div id="sidebar-container" class="w-72 flex-shrink-0 bg-white border-r"></div>
+<body class="h-full font-sans bg-gray-100 flex flex-col">
+  <!-- Mobile Header -->
+  <header class="md:hidden sticky top-0 z-40 bg-white shadow p-4 flex items-center justify-between">
+    <div class="flex items-center gap-3">
+      <button id="menuToggle" class="text-gray-700 focus:outline-none">
+        <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+      <span class="text-indigo-600 text-lg font-bold">Admin</span>
+      <span id="userName" class="ml-2 text-sm text-gray-500"></span>
+    </div>
+  </header>
+
+  <div class="flex flex-1">
+    <div id="sidebar-container"></div>
     <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
-    <!-- Main Content Wrapper -->
-    <div class="flex-1 flex flex-col h-full overflow-hidden">
-      <!-- Mobile Header -->
-      <header class="md:hidden sticky top-0 z-40 bg-white shadow p-4 flex items-center justify-between">
-        <div class="flex items-center gap-3">
-          <button id="menuToggle" class="text-gray-700 focus:outline-none">
-            <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-            </svg>
-          </button>
-          <span class="text-indigo-600 text-lg font-bold">Admin</span>
-          <span id="userName" class="ml-2 text-sm text-gray-500"></span>
-        </div>
-      </header>
+    <!-- Main Section -->
+    <main class="flex-1 p-6 md:p-10">
+      <div class="max-w-5xl mx-auto space-y-6">
+        <!-- Title -->
+        <h1 class="text-3xl font-bold text-indigo-700">Support Tickets</h1>
 
-      <!-- Scrollable Main Section -->
-      <main class="flex-1 overflow-y-auto p-6 md:p-10">
-        <div class="max-w-5xl mx-auto space-y-6">
-          <!-- Title -->
-          <h1 class="text-3xl font-bold text-indigo-700">Support Tickets</h1>
+        <!-- Search Input -->
+        <input
+          id="ticketSearch"
+          type="text"
+          placeholder="🔍 Search tickets..."
+          class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500"
+        />
+<div class="flex flex-wrap gap-6 items-center">
+  <select id="filterDate" class="border rounded px-3 py-2 text-sm shadow-sm">
+    <option value="">🕓 Filter by Time</option>
+    <option value="newest">Newest First</option>
+    <option value="oldest">Oldest First</option>
+  </select>
 
-          <!-- Search Input -->
-          <input
-            id="ticketSearch"
-            type="text"
-            placeholder="🔍 Search tickets..."
-            class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500"
-          />
+  <select id="filterStatus" class="border rounded px-3 py-2 text-sm shadow-sm">
+    <option value="">📌 Filter by Status</option>
+    <option value="Open">Open</option>
+    <option value="Resolved">Resolved</option>
+  </select>
+</div>
 
-          <!-- Filters -->
-          <div class="flex flex-wrap gap-6 items-center">
-            <select id="filterDate" class="border rounded px-3 py-2 text-sm shadow-sm">
-              <option value="">🕓 Filter by Time</option>
-              <option value="newest">Newest First</option>
-              <option value="oldest">Oldest First</option>
-            </select>
+        <!-- Ticket List -->
+        <div id="ticketList" class="space-y-6 mt-6"></div>
 
-            <select id="filterStatus" class="border rounded px-3 py-2 text-sm shadow-sm">
-              <option value="">📌 Filter by Status</option>
-              <option value="Open">Open</option>
-              <option value="Resolved">Resolved</option>
-            </select>
-          </div>
-
-          <!-- Ticket List -->
-          <div id="ticketList" class="space-y-6 mt-6"></div>
-
-          <!-- Empty State -->
-          <div id="emptyState" class="hidden text-center text-gray-400 mt-10">
-            <p>No support tickets found.</p>
-          </div>
-
-          <!-- Pagination -->
-          <div id="pagination" class="flex justify-center gap-3 mt-8 hidden">
-            <button id="prevPage" class="px-4 py-2 rounded border shadow bg-white hover:bg-gray-50 text-sm">← Previous</button>
-            <span id="pageIndicator" class="px-4 py-2 font-medium text-gray-600 text-sm">Page 1</span>
-            <button id="nextPage" class="px-4 py-2 rounded border shadow bg-white hover:bg-gray-50 text-sm">Next →</button>
-          </div>
-        </div>
-      </main>
-    </div>
-
-    <!-- Modal -->
-    <div id="ticketModal" class="fixed inset-0 z-50 bg-black bg-opacity-40 hidden items-center justify-center px-4 py-6 overflow-y-auto">
-      <!-- Modal Container -->
-      <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md mx-auto p-6 animate-fade-in relative">
-        <!-- Header -->
-        <div class="flex justify-between items-center mb-4">
-          <h2 id="modalTitle" class="text-lg font-semibold text-indigo-700">Reply to Ticket</h2>
-          <button id="modalClose" class="text-gray-400 hover:text-gray-700 text-2xl font-bold leading-none">&times;</button>
+        <!-- Empty State -->
+        <div id="emptyState" class="hidden text-center text-gray-400 mt-10">
+          <p>No support tickets found.</p>
         </div>
 
-        <!-- Scrollable Content -->
-        <div class="overflow-y-auto max-h-[60vh] pr-1">
-          <!-- Ticket Thread -->
-          <div id="modalThread" class="text-sm text-gray-700 space-y-3 mb-4 border-t pt-3"></div>
-
-          <!-- Reply Textarea -->
-          <textarea
-            id="modalTextarea"
-            rows="4"
-            placeholder="Write your reply..."
-            class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 resize-none mb-4"
-          ></textarea>
-        </div>
-
-        <!-- Footer -->
-        <div class="text-right">
-          <button
-            id="modalSubmit"
-            class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg shadow-sm transition"
-          >
-            Send Reply
-          </button>
+        <!-- Pagination -->
+        <div id="pagination" class="flex justify-center gap-3 mt-8 hidden">
+          <button id="prevPage" class="px-4 py-2 rounded border shadow bg-white hover:bg-gray-50 text-sm">← Previous</button>
+          <span id="pageIndicator" class="px-4 py-2 font-medium text-gray-600 text-sm">Page 1</span>
+          <button id="nextPage" class="px-4 py-2 rounded border shadow bg-white hover:bg-gray-50 text-sm">Next →</button>
         </div>
       </div>
+    </main>
+  </div>
+
+  <!-- Modal -->
+<div id="ticketModal" class="fixed inset-0 z-50 bg-black bg-opacity-40 hidden items-center justify-center px-4 py-6 overflow-y-auto">
+  <!-- Modal Container -->
+  <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md mx-auto p-6 animate-fade-in relative">
+    
+    <!-- Header -->
+    <div class="flex justify-between items-center mb-4">
+      <h2 id="modalTitle" class="text-lg font-semibold text-indigo-700">Reply to Ticket</h2>
+      <button id="modalClose" class="text-gray-400 hover:text-gray-700 text-2xl font-bold leading-none">&times;</button>
     </div>
 
-    <!-- Ticket Template -->
-    <template id="ticketThreadTemplate">
-      <div class="bg-white border border-gray-200 rounded-2xl shadow-md p-6 space-y-6">
-        <div class="space-y-2">
-          <h3 class="text-xl font-bold text-indigo-700 leading-tight">{{subject}}</h3>
-          <p class="text-base text-gray-800">{{message}}</p>
-          <div class="text-sm text-gray-600 pt-2 space-y-1">
-            <p><span class="font-medium text-gray-800">From:</span> {{business_name}}</p>
-            <p><span class="font-medium text-gray-800">Status:</span> <span class="text-{{statusColor}} font-medium">{{status}}</span></p>
-            <p><span class="font-medium text-gray-800">Created:</span> {{created}}</p>
-          </div>
-        </div>
-
-        <!-- Buttons -->
-        <div class="flex flex-wrap gap-4 pt-6 border-t border-gray-100">
-          <button class="reply-btn bg-blue-600 hover:bg-blue-700 text-white text-sm font-semibold px-6 py-2.5 rounded-full shadow-sm transition">💬 Reply</button>
-          <button class="toggle-thread-btn border border-indigo-300 text-indigo-600 hover:bg-indigo-50 text-sm px-6 py-2.5 rounded-full transition">📂 Show Thread</button>
-          <button class="resolve-btn border border-green-300 text-green-600 hover:bg-green-50 text-sm px-6 py-2.5 rounded-full transition">✔ Mark Resolved</button>
-          <button class="delete-btn border border-red-300 text-red-600 hover:bg-red-50 text-sm px-6 py-2.5 rounded-full transition">🗑 Delete</button>
-        </div>
-
-        <div class="replies mt-4 hidden"></div>
+    <!-- Scrollable Content -->
+    <div class="overflow-y-auto max-h-[60vh] pr-1">
+      <!-- Ticket Thread -->
+      <div id="modalThread" class="text-sm text-gray-700 space-y-3 mb-4 border-t pt-3">
+        <!-- Replies dynamically inserted here -->
       </div>
-    </template>
-  </body>
+
+      <!-- Reply Textarea -->
+      <textarea
+        id="modalTextarea"
+        rows="4"
+        placeholder="Write your reply..."
+        class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 resize-none mb-4"
+      ></textarea>
+    </div>
+
+    <!-- Footer -->
+    <div class="text-right">
+      <button
+        id="modalSubmit"
+        class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg shadow-sm transition"
+      >
+        Send Reply
+      </button>
+    </div>
+  </div>
+</div>
+
+
+  <!-- Ticket Template -->
+  <template id="ticketThreadTemplate">
+    <div class="bg-white border border-gray-200 rounded-2xl shadow-md p-6 space-y-6">
+      <div class="space-y-2">
+        <h3 class="text-xl font-bold text-indigo-700 leading-tight">{{subject}}</h3>
+        <p class="text-base text-gray-800">{{message}}</p>
+        <div class="text-sm text-gray-600 pt-2 space-y-1">
+          <p><span class="font-medium text-gray-800">From:</span> {{business_name}}</p>
+          <p><span class="font-medium text-gray-800">Status:</span> <span class="text-{{statusColor}} font-medium">{{status}}</span></p>
+          <p><span class="font-medium text-gray-800">Created:</span> {{created}}</p>
+        </div>
+      </div>
+
+      <!-- Buttons -->
+      <div class="flex flex-wrap gap-4 pt-6 border-t border-gray-100">
+        <button class="reply-btn bg-blue-600 hover:bg-blue-700 text-white text-sm font-semibold px-6 py-2.5 rounded-full shadow-sm transition">
+          💬 Reply
+        </button>
+        <button class="toggle-thread-btn border border-indigo-300 text-indigo-600 hover:bg-indigo-50 text-sm px-6 py-2.5 rounded-full transition">
+          📂 Show Thread
+        </button>
+        <button class="resolve-btn border border-green-300 text-green-600 hover:bg-green-50 text-sm px-6 py-2.5 rounded-full transition">
+          ✔ Mark Resolved
+        </button>
+        <button class="delete-btn border border-red-300 text-red-600 hover:bg-red-50 text-sm px-6 py-2.5 rounded-full transition">
+          🗑 Delete
+        </button>
+      </div>
+
+      <div class="replies mt-4 hidden"></div>
+    </div>
+  </template>
+</body>
 </html>
