--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -88,31 +88,31 @@
     </main>
   </div>
 
- <!-- Modal -->
+<!-- Modal -->
 <div id="ticketModal" class="fixed inset-0 z-50 bg-black bg-opacity-40 hidden flex items-center justify-center px-4">
   <!-- Modal Container -->
-  <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md max-h-[90vh] overflow-y-auto mx-auto p-6 animate-fade-in relative">
+  <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md max-h-[90vh] mx-auto p-0 animate-fade-in relative flex flex-col">
     
     <!-- Header -->
-    <div class="flex justify-between items-center mb-4">
+    <div class="flex justify-between items-center px-6 pt-6 mb-2">
       <h2 id="modalTitle" class="text-lg font-semibold text-indigo-700">Reply to Ticket</h2>
       <button id="modalClose" class="text-gray-400 hover:text-gray-700 text-2xl font-bold leading-none">&times;</button>
     </div>
 
-    <!-- Scrollable Content -->
-    <div>
-      <div id="modalThread" class="text-sm text-gray-700 space-y-3 mb-4 border-t pt-3"></div>
+    <!-- Scrollable Body -->
+    <div class="overflow-y-auto px-6 pb-4 space-y-4">
+      <div id="modalThread" class="text-sm text-gray-700 space-y-3 border-t pt-3"></div>
 
       <textarea
         id="modalTextarea"
         rows="4"
         placeholder="Write your reply..."
-        class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 resize-none mb-4"
+        class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 resize-none"
       ></textarea>
     </div>
 
     <!-- Footer -->
-    <div class="text-right">
+    <div class="px-6 py-4 border-t text-right">
       <button
         id="modalSubmit"
         class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg shadow-sm transition"
@@ -122,6 +122,7 @@
     </div>
   </div>
 </div>
+
 
 
 
