--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -127,36 +127,37 @@
 
 
   <!-- Ticket Template -->
-  <template id="ticketThreadTemplate">
-    <div class="bg-white border border-gray-200 rounded-2xl shadow-md p-6 space-y-6">
-      <div class="space-y-2">
-        <h3 class="text-xl font-bold text-indigo-700 leading-tight">{{subject}}</h3>
-        <p class="text-base text-gray-800">{{message}}</p>
-        <div class="text-sm text-gray-600 pt-2 space-y-1">
-          <p><span class="font-medium text-gray-800">From:</span> {{business_name}}</p>
-          <p><span class="font-medium text-gray-800">Status:</span> <span class="text-{{statusColor}} font-medium">{{status}}</span></p>
-          <p><span class="font-medium text-gray-800">Created:</span> {{created}}</p>
-        </div>
+<template id="ticketThreadTemplate">
+  <div class="bg-white border border-gray-200 rounded-2xl shadow-md p-6 space-y-6 max-h-[75vh] overflow-y-auto">
+    <div class="space-y-2">
+      <h3 class="text-xl font-bold text-indigo-700 leading-tight">{{subject}}</h3>
+      <p class="text-base text-gray-800">{{message}}</p>
+      <div class="text-sm text-gray-600 pt-2 space-y-1">
+        <p><span class="font-medium text-gray-800">From:</span> {{business_name}}</p>
+        <p><span class="font-medium text-gray-800">Status:</span> <span class="text-{{statusColor}} font-medium">{{status}}</span></p>
+        <p><span class="font-medium text-gray-800">Created:</span> {{created}}</p>
       </div>
-
-      <!-- Buttons -->
-      <div class="flex flex-wrap gap-4 pt-6 border-t border-gray-100">
-        <button class="reply-btn bg-blue-600 hover:bg-blue-700 text-white text-sm font-semibold px-6 py-2.5 rounded-full shadow-sm transition">
-          💬 Reply
-        </button>
-        <button class="toggle-thread-btn border border-indigo-300 text-indigo-600 hover:bg-indigo-50 text-sm px-6 py-2.5 rounded-full transition">
-          📂 Show Thread
-        </button>
-        <button class="resolve-btn border border-green-300 text-green-600 hover:bg-green-50 text-sm px-6 py-2.5 rounded-full transition">
-          ✔ Mark Resolved
-        </button>
-        <button class="delete-btn border border-red-300 text-red-600 hover:bg-red-50 text-sm px-6 py-2.5 rounded-full transition">
-          🗑 Delete
-        </button>
-      </div>
-
-      <div class="replies mt-4 hidden"></div>
     </div>
-  </template>
+
+    <!-- Buttons -->
+    <div class="flex flex-wrap gap-4 pt-6 border-t border-gray-100">
+      <button class="reply-btn bg-blue-600 hover:bg-blue-700 text-white text-sm font-semibold px-6 py-2.5 rounded-full shadow-sm transition">
+        💬 Reply
+      </button>
+      <button class="toggle-thread-btn border border-indigo-300 text-indigo-600 hover:bg-indigo-50 text-sm px-6 py-2.5 rounded-full transition">
+        📂 Show Thread
+      </button>
+      <button class="resolve-btn border border-green-300 text-green-600 hover:bg-green-50 text-sm px-6 py-2.5 rounded-full transition">
+        ✔ Mark Resolved
+      </button>
+      <button class="delete-btn border border-red-300 text-red-600 hover:bg-red-50 text-sm px-6 py-2.5 rounded-full transition">
+        🗑 Delete
+      </button>
+    </div>
+
+    <div class="replies mt-4 hidden"></div>
+  </div>
+</template>
+
 </body>
 </html>
