--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -27,7 +27,7 @@
 
 <body class="h-full font-sans bg-gray-100 flex flex-col">
   <!-- Mobile Header -->
-  <header class="md:hidden sticky top-0 z-40 bg-white shadow p-4 flex items-center justify-between">
+  <header class="md:hidden sticky top-0 z-40 bg-white shadow-sm p-4 flex items-center justify-between">
     <div class="flex items-center gap-3">
       <button id="menuToggle" class="text-gray-700 focus:outline-none">
         <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
@@ -35,7 +35,7 @@
         </svg>
       </button>
       <span class="text-indigo-600 text-lg font-bold">Admin</span>
-      <span id="userName" class="ml-2 text-sm text-gray-500"></span>
+      <span id="userName" class="ml-2 text-sm text-gray-500 truncate"></span>
     </div>
   </header>
 
@@ -44,31 +44,31 @@
     <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
     <!-- Main Section -->
-    <main class="flex-1 p-6 md:p-10">
+    <main class="flex-1 p-6 md:p-10 overflow-y-auto">
       <div class="max-w-5xl mx-auto space-y-6">
-        <!-- Title -->
         <h1 class="text-3xl font-bold text-indigo-700">Support Tickets</h1>
 
-        <!-- Search Input -->
-        <input
-          id="ticketSearch"
-          type="text"
-          placeholder="🔍 Search tickets..."
-          class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500"
-        />
-<div class="flex flex-wrap gap-6 items-center">
-  <select id="filterDate" class="border rounded px-3 py-2 text-sm shadow-sm">
-    <option value="">🕓 Filter by Time</option>
-    <option value="newest">Newest First</option>
-    <option value="oldest">Oldest First</option>
-  </select>
-
-  <select id="filterStatus" class="border rounded px-3 py-2 text-sm shadow-sm">
-    <option value="">📌 Filter by Status</option>
-    <option value="Open">Open</option>
-    <option value="Resolved">Resolved</option>
-  </select>
-</div>
+        <!-- Search & Filters -->
+        <div class="space-y-4">
+          <input
+            id="ticketSearch"
+            type="text"
+            placeholder="🔍 Search tickets..."
+            class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500"
+          />
+          <div class="flex flex-wrap gap-4 items-center">
+            <select id="filterDate" class="border rounded px-3 py-2 text-sm shadow-sm">
+              <option value="">🕓 Filter by Time</option>
+              <option value="newest">Newest First</option>
+              <option value="oldest">Oldest First</option>
+            </select>
+            <select id="filterStatus" class="border rounded px-3 py-2 text-sm shadow-sm">
+              <option value="">📌 Filter by Status</option>
+              <option value="Open">Open</option>
+              <option value="Resolved">Resolved</option>
+            </select>
+          </div>
+        </div>
 
         <!-- Ticket List -->
         <div id="ticketList" class="space-y-6 mt-6"></div>
@@ -88,76 +88,70 @@
     </main>
   </div>
 
-<!-- Modal -->
-<div id="ticketModal" class="fixed inset-0 z-50 bg-black bg-opacity-40 hidden flex items-center justify-center px-4">
-  <!-- Modal Container -->
-  <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md max-h-[90vh] mx-auto p-0 animate-fade-in relative flex flex-col">
-    
-    <!-- Header -->
-    <div class="flex justify-between items-center px-6 pt-6 mb-2">
-      <h2 id="modalTitle" class="text-lg font-semibold text-indigo-700">Reply to Ticket</h2>
-      <button id="modalClose" class="text-gray-400 hover:text-gray-700 text-2xl font-bold leading-none">&times;</button>
-    </div>
+  <!-- Modal -->
+  <div id="ticketModal" class="fixed inset-0 z-50 bg-black bg-opacity-40 hidden flex items-center justify-center px-4">
+    <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md max-h-[90vh] animate-fade-in relative flex flex-col overflow-hidden">
+      <!-- Header -->
+      <div class="flex justify-between items-center px-6 pt-6 pb-3 border-b">
+        <h2 id="modalTitle" class="text-lg font-semibold text-indigo-700">Reply to Ticket</h2>
+        <button id="modalClose" class="text-gray-400 hover:text-gray-700 text-2xl font-bold leading-none">&times;</button>
+      </div>
 
-    <!-- Scrollable Body -->
-    <div class="overflow-y-auto px-6 pb-4 space-y-4">
-      <div id="modalThread" class="text-sm text-gray-700 space-y-3 border-t pt-3"></div>
+      <!-- Scrollable Content -->
+      <div class="flex-1 overflow-y-auto px-6 py-4 space-y-4">
+        <div id="modalThread" class="text-sm text-gray-700 space-y-3 border-t pt-3"></div>
 
-      <textarea
-        id="modalTextarea"
-        rows="4"
-        placeholder="Write your reply..."
-        class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 resize-none"
-      ></textarea>
-    </div>
+        <textarea
+          id="modalTextarea"
+          rows="4"
+          placeholder="Write your reply..."
+          class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 resize-none"
+        ></textarea>
+      </div>
 
-    <!-- Footer -->
-    <div class="px-6 py-4 border-t text-right">
-      <button
-        id="modalSubmit"
-        class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg shadow-sm transition"
-      >
-        Send Reply
-      </button>
-    </div>
-  </div>
-</div>
-
-
-
-
-  <!-- Ticket Template -->
-<template id="ticketThreadTemplate">
-  <div class="bg-white border border-gray-200 rounded-2xl shadow-md p-6 space-y-6 max-h-[75vh] overflow-y-auto">
-    <div class="space-y-2">
-      <h3 class="text-xl font-bold text-indigo-700 leading-tight">{{subject}}</h3>
-      <p class="text-base text-gray-800">{{message}}</p>
-      <div class="text-sm text-gray-600 pt-2 space-y-1">
-        <p><span class="font-medium text-gray-800">From:</span> {{business_name}}</p>
-        <p><span class="font-medium text-gray-800">Status:</span> <span class="text-{{statusColor}} font-medium">{{status}}</span></p>
-        <p><span class="font-medium text-gray-800">Created:</span> {{created}}</p>
+      <!-- Footer -->
+      <div class="px-6 py-4 border-t text-right">
+        <button
+          id="modalSubmit"
+          class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-lg shadow-sm transition"
+        >
+          Send Reply
+        </button>
       </div>
     </div>
-
-    <!-- Buttons -->
-    <div class="flex flex-wrap gap-4 pt-6 border-t border-gray-100">
-      <button class="reply-btn bg-blue-600 hover:bg-blue-700 text-white text-sm font-semibold px-6 py-2.5 rounded-full shadow-sm transition">
-        💬 Reply
-      </button>
-      <button class="toggle-thread-btn border border-indigo-300 text-indigo-600 hover:bg-indigo-50 text-sm px-6 py-2.5 rounded-full transition">
-        📂 Show Thread
-      </button>
-      <button class="resolve-btn border border-green-300 text-green-600 hover:bg-green-50 text-sm px-6 py-2.5 rounded-full transition">
-        ✔ Mark Resolved
-      </button>
-      <button class="delete-btn border border-red-300 text-red-600 hover:bg-red-50 text-sm px-6 py-2.5 rounded-full transition">
-        🗑 Delete
-      </button>
-    </div>
-
-    <div class="replies mt-4 hidden"></div>
   </div>
-</template>
 
+  <!-- Ticket Template -->
+  <template id="ticketThreadTemplate">
+    <div class="bg-white border border-gray-200 rounded-2xl shadow-md p-6 space-y-6 max-h-[75vh] overflow-y-auto">
+      <div class="space-y-2">
+        <h3 class="text-xl font-bold text-indigo-700 leading-tight">{{subject}}</h3>
+        <p class="text-base text-gray-800">{{message}}</p>
+        <div class="text-sm text-gray-600 pt-2 space-y-1">
+          <p><span class="font-medium text-gray-800">From:</span> {{business_name}}</p>
+          <p><span class="font-medium text-gray-800">Status:</span> <span class="text-{{statusColor}} font-medium">{{status}}</span></p>
+          <p><span class="font-medium text-gray-800">Created:</span> {{created}}</p>
+        </div>
+      </div>
+
+      <!-- Buttons -->
+      <div class="flex flex-wrap gap-4 pt-6 border-t border-gray-100">
+        <button class="reply-btn bg-blue-600 hover:bg-blue-700 text-white text-sm font-semibold px-6 py-2.5 rounded-full shadow-sm transition">
+          💬 Reply
+        </button>
+        <button class="toggle-thread-btn border border-indigo-300 text-indigo-600 hover:bg-indigo-50 text-sm px-6 py-2.5 rounded-full transition">
+          📂 Show Thread
+        </button>
+        <button class="resolve-btn border border-green-300 text-green-600 hover:bg-green-50 text-sm px-6 py-2.5 rounded-full transition">
+          ✔ Mark Resolved
+        </button>
+        <button class="delete-btn border border-red-300 text-red-600 hover:bg-red-50 text-sm px-6 py-2.5 rounded-full transition">
+          🗑 Delete
+        </button>
+      </div>
+
+      <div class="replies mt-4 hidden"></div>
+    </div>
+  </template>
 </body>
 </html>
